--- a/public/globals.css
+++ b/public/globals.css
@@ -19,3 +19,16 @@
 body {
   color: rgb(var(--foreground-rgb));
 }
+
+/*部分ant design 样式与tailwind 冲突*/
+.anticon svg {
+  vertical-align: baseline;
+}
+.ant-btn-primary {
+  background-color: #1677ff;
+}
+.ant-btn-default,
+.ant-btn-dashed {
+  background-color: white;
+}
+
